implemented shared mail, link modal; ui fixes

--- a/src/app/shared/components/share-mail/share-mail.component.html
+++ b/src/app/shared/components/share-mail/share-mail.component.html
@@ -21,7 +21,7 @@
           <input matInput type="text" placeholder="Search Content">
         </mat-form-field>
         <div class="col-4 mt-3">
-          <div class="btn btn-primary" (click)="openModal(addResource)">
+          <div class="btn btn-primary" (click)="openModal()">
             <i class="fas fa-file-medical mr-1"></i>Add resource
           </div>
         </div>
