--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -93,40 +93,40 @@
           <div class="mt-2 row my-files">
             <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let f of selFiles">
               <div class="card curs-ptr">
-                <div class="card-body" (click)="chkFolderAndAdd(f)">
-                  <div class="imagePreview text-center">
+                <div class="card-body">
+                  <div class="imagePreview text-center" (click)="chkFolderAndAdd(f)">
                     <img src="assets/images/discription.png">
                   </div>
                   <div class="options rounded">
                     <div class="dropleft">
                       <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false" (click)="$event.stopPropagation();">
+                        aria-expanded="false">
                         <i class="fas fa-share-square"></i>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
-                        <h6 class="ml-2 text-white-50">External Sharing</h6>
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(email)"><i
+                        <h6 class="ml-2 text-hi-dark">External Sharing</h6>
+                        <a class="dropdown-item" (click)="cmnModal('email')"><i
                             class="fa fa-envelope mr-1"></i>Email</a>
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(getLink)"><i
-                            class="fa fa-link mr-1"></i>Get a link</a>
+                        <a class="dropdown-item" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a
+                          link</a>
                         <div class="dropdown-divider"></div>
-                        <h6 class="ml-2 text-white-50">Internal Sharing</h6>
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(shareColl)"><i
+                        <h6 class="ml-2 text-hi-dark">Internal Sharing</h6>
+                        <a class="dropdown-item" (click)="openModal(shareColl)"><i
                             class="fa fa-user-friends mr-1"></i>Share
                           with
                           colleagues</a>
                       </div>
                     </div>
-                    <div class="btn my-1" (click)="$event.stopPropagation();openModal(addtoCollection)">
+                    <div class="btn my-1" (click)="openModal(addtoCollection)">
                       <i class="fas fa-folder-plus"></i>
                     </div>
-                    <div class="btn" (click)="$event.stopPropagation();">
+                    <div class="btn">
                       <i class="fas fa-trash-alt"></i>
                     </div>
                   </div>
                 </div>
-                <div class="card-footer">
-                  <div class="name">{{f.name}}</div>
+                <div class="card-footer" (click)="chkFolderAndAdd(f)">
+                  <div class="name text-truncate">{{f.name}}</div>
                   <div class="float-left text-secondary d-flex">
                     <div class="date">{{(f.createdDate|date:'dd MMM, yyyy')||'N/A'}}</div>
                     <div class="mx-2">l</div>
@@ -159,11 +159,11 @@
               </tr>
             </thead>
             <tbody *ngIf="allFiles.length>0">
-              <tr *ngFor="let aF of allFiles" (click)="chkFolderAndAdd(aF)">
+              <tr *ngFor="let aF of allFiles">
                 <td class="align-middle">
                   <mat-checkbox></mat-checkbox>
                 </td>
-                <td class="align-middle">
+                <td class="align-middle" (click)="chkFolderAndAdd(aF)">
                   <div class="d-flex">
                     <div *ngIf="aF.isFldr">
                       <i class="fas fa-folder mr-1"></i>
@@ -182,24 +182,23 @@
                   <div class="d-flex">
                     <div class="dropleft">
                       <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false" (click)="$event.stopPropagation();openModal(getLink)">
+                        aria-expanded="false">
                         <i class="fas fa-share-square"></i>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(email)"><i
+                        <a class="dropdown-item" (click)="cmnModal('email')"><i
                             class="fa fa-envelope mr-1"></i>Email</a>
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(getLink)"><i
-                            class="fa fa-link mr-1"></i>Get a
+                        <a class="dropdown-item" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a
                           link</a>
                       </div>
                     </div>
-                    <div *ngIf="!aF.isFldr" class="btn" (click)="$event.stopPropagation();openModal(addtoCollection)">
+                    <div *ngIf="!aF.isFldr" class="btn" (click)="openModal(addtoCollection)">
                       <i class="fas fa-folder-plus"></i>
                     </div>
-                    <div *ngIf="aF.isFldr" class="btn" (click)="$event.stopPropagation();setSelRow(fldrModal,aF);">
+                    <div *ngIf="aF.isFldr" class="btn" (click)="setSelRow(fldrModal,aF);">
                       <i class="fas fa-edit"></i>
                     </div>
-                    <div class="btn" (click)="$event.stopPropagation();">
+                    <div class="btn">
                       <i class="fas fa-trash-alt"></i>
                     </div>
                   </div>
@@ -220,9 +219,9 @@
     <div class="selected-items text-secondary align-self-center">1 item selected</div>
     <div class="mr-1 ml-3 align-self-center">|</div>
     <div class="btn btn-outline-primary border-0 align-self-center">Clear</div>
-    <div class="btn btn-light align-self-center ml-auto bg-white" (click)="openModal(email)"><i
+    <div class="btn btn-light align-self-center ml-auto bg-white" (click)="cmnModal('email')"><i
         class="fa fa-envelope mr-1"></i>Email</div>
-    <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i
+    <div class="btn btn-light align-self-center bg-white" (click)="cmnModal('getLink')"><i
         class="fa fa-link mr-1"></i>Get
       a
       link</div>
@@ -244,85 +243,6 @@
         <mat-label>Name</mat-label>
         <input matInput type="text" placeholder="New Collection Name">
       </mat-form-field>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-    </div>
-  </ng-template>
-
-  <!-- email modal -->
-  <ng-template #email let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Email</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body" ngbAutofocus>
-      <div class="row">
-        <div class="col-9 border-right">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>To</mat-label>
-            <input matInput type="text" placeholder="Recipients">
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Subject</mat-label>
-            <input matInput type="text" placeholder="Subject">
-          </mat-form-field>
-          <div class="row">
-            <mat-form-field appearance="outline" class="col-8">
-              <mat-label>Message</mat-label>
-              <input matInput type="text" placeholder="Search Content">
-            </mat-form-field>
-            <div class="col-4 mt-3">
-              <div class="btn btn-primary">
-                <i class="fas fa-file-medical mr-1"></i>Add resource
-              </div>
-            </div>
-          </div>
-          <mat-form-field appearance="outline" class="w-100">
-            <textarea matInput type="text" placeholder=""></textarea>
-          </mat-form-field>
-        </div>
-        <div class="col-3">
-          <h5>Sharing Settings</h5>
-          <mat-checkbox class="ml-2">Allow downloads</mat-checkbox>
-          <mat-checkbox class="ml-2">Send me a copy</mat-checkbox>
-        </div>
-      </div>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-    </div>
-  </ng-template>
-
-  <!-- get a link modal -->
-  <ng-template #getLink let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Get a Link</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body" ngbAutofocus>
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Name</mat-label>
-        <input type="text" matInput placeholder="Name">
-      </mat-form-field>
-      <mat-checkbox>Allow downloads</mat-checkbox>
-      <mat-label class="d-block mt-3">Content</mat-label>
-      <div class="row">
-        <div class="col-9">
-          <mat-form-field appearance="outline" class="w-100 search">
-            <mat-label class="ml-2">Search for content</mat-label>
-            <input class="ml-2" type="text" matInput placeholder="Search for content">
-            <i class="fa fa-search text-secondary" matPrefix style="font-size: 18px;"></i>
-          </mat-form-field>
-        </div>
-        <div class="col-3 mt-3">
-          <div class="btn btn-primary">Browse</div>
-        </div>
-      </div>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
