--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -3,10 +3,10 @@
   <h3 class="mb-4 clearfix heading align-self-center">
     {{selColctn!.name}}
     <div class="float-right d-flex">
-      <div class="btn btn-light" (click)="openModal(email)">
+      <div class="btn btn-light" (click)="cmnModal('email')">
         <i class="fa fa-envelope mr-1"></i>
       </div>
-      <div class="btn btn-light" (click)="openModal(getLink)">
+      <div class="btn btn-light" (click)="cmnModal('getLink')">
         <i class="fa fa-link mr-1"></i>
       </div>
       <div class="dropdown align-self-center mr-5">
@@ -45,7 +45,7 @@
         <div class="card curs-ptr">
           <div class="card-body">
             <div class="imagePreview text-center" (click)="navgToCntnt(cntnt)">
-              <img [src]="cntnt.pdfImage?cntnt.pdfImage:defImg">
+              <img [src]="cntnt.pdfImages.length > 0?cntnt.pdfImages[0].imagePath : defImg">
             </div>
             <div class="options rounded">
               <div class="dropleft">
@@ -54,9 +54,9 @@
                   <i class="fas fa-share-square"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="shareDD">
-                  <h6 class="ml-2 text-white-50">External Sharing</h6>
-                  <a class="dropdown-item" (click)="openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+                  <!-- <h6 class="ml-2 text-white-50">External Sharing</h6> -->
+                  <a class="dropdown-item" (click)="cmnModal('email')"><i class="fa fa-envelope mr-1"></i>Email</a>
+                  <a class="dropdown-item" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a link</a>
                   <!-- <div class="dropdown-divider"></div>
                   <h6 class="ml-2 text-white-50">Internal Sharing</h6>
                   <a class="dropdown-item" (click)="openModal(shareColl)"><i class="fa fa-user-friends mr-1"></i>Share
@@ -123,8 +123,8 @@
                   <i class="fas fa-share-square"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="shareDD">
-                  <a class="dropdown-item" (click)="openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+                  <a class="dropdown-item" (click)="cmnModal('email')"><i class="fa fa-envelope mr-1"></i>Email</a>
+                  <a class="dropdown-item" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a link</a>
                 </div>
               </div>
               <div class="btn" (click)="openModal(addtoCollection)">
@@ -149,9 +149,9 @@
   <div class="selected-items text-secondary align-self-center">1 item selected</div>
   <div class="mr-1 ml-3 align-self-center">|</div>
   <div class="btn btn-outline-primary border-0 align-self-center">Clear</div>
-  <div class="btn btn-light align-self-center ml-auto bg-white" (click)="openModal(email)"><i
+  <div class="btn btn-light align-self-center ml-auto bg-white" (click)="cmnModal('email')"><i
       class="fa fa-envelope mr-1"></i>Email</div>
-  <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get
+  <div class="btn btn-light align-self-center bg-white" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get
     a
     link</div>
   <div class="btn btn-light align-self-center bg-white" (click)="openModal(addtoCollection)"><i
@@ -303,137 +303,6 @@
       <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
       {{addContentArr.length == 0 ? '0 Items Selected' : 'Insert ' + addContentArr.length + ' item(s)'}}
     </button>
-  </div>
-</ng-template>
-
-<!-- email modal -->
-<ng-template #email let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Email</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body" ngbAutofocus>
-    <div class="row">
-      <div class="col-9 border-right">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>To</mat-label>
-          <input matInput type="text" placeholder="Recipients">
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Subject</mat-label>
-          <input matInput type="text" placeholder="Subject">
-        </mat-form-field>
-        <div class="row">
-          <mat-form-field appearance="outline" class="col-8">
-            <mat-label>Message</mat-label>
-            <input matInput type="text" placeholder="Search Content">
-          </mat-form-field>
-          <div class="col-4 mt-3">
-            <div class="btn btn-primary" (click)="openModal(addResource)">
-              <i class="fas fa-file-medical mr-1"></i>Add resource
-            </div>
-          </div>
-        </div>
-        <mat-form-field appearance="outline" class="w-100">
-          <textarea matInput type="text" placeholder=""></textarea>
-        </mat-form-field>
-      </div>
-      <div class="col-3">
-        <h5>Sharing Settings</h5>
-        <mat-checkbox class="ml-2">Allow downloads</mat-checkbox>
-        <mat-checkbox class="ml-2">Send me a copy</mat-checkbox>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-  </div>
-</ng-template>
-
-<!-- get a link modal -->
-<ng-template #getLink let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Get a Link</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body" ngbAutofocus>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Name</mat-label>
-      <input type="text" matInput placeholder="Name">
-    </mat-form-field>
-    <mat-checkbox>Allow downloads</mat-checkbox>
-    <mat-label class="d-block mt-3">Content</mat-label>
-    <div class="row">
-      <div class="col-9">
-        <mat-form-field appearance="outline" class="w-100 search">
-          <mat-label class="ml-2">Search for content</mat-label>
-          <input class="ml-2" type="text" matInput placeholder="Search for content">
-          <i class="fa fa-search text-secondary" matPrefix style="font-size: 18px;"></i>
-        </mat-form-field>
-      </div>
-      <div class="col-3 mt-3">
-        <div class="btn btn-primary">Browse</div>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-  </div>
-</ng-template>
-
-<!-- share with colleagues -->
-<ng-template #shareColl let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Add URL</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body" ngbAutofocus>
-    <div class="file-sharing">
-      File Sharing is ON
-      <mat-slide-toggle class="float-right" #sharingValue></mat-slide-toggle>
-    </div>
-    <div class="rounded border border-primary d-flex text-justify text-primary px-2 my-3 py-2">
-      <i class="fa fa-info-circle align-self-center mr-2"></i>
-      File sharing is enabled for this file. Anyone at Hi-Force Hydraulic Tools with the file link will be able to view
-      this file.
-    </div>
-    <div *ngIf="sharingValue.checked">
-      <mat-label>Share Options:</mat-label>
-      <mat-radio-group aria-label="Select an option" class="d-block">
-        <mat-radio-button value="link" class="mx-3" checked="true" #link>Share by
-          Link
-        </mat-radio-button>
-        <mat-radio-button value="email">Share by Email</mat-radio-button>
-      </mat-radio-group>
-      <hr>
-      <div class="link" *ngIf="link.checked">
-        <mat-form-field appearance="outline" class="w-100 copy-link">
-          <mat-label>Get Link</mat-label>
-          <input type="text" matInput value="https://www.google.com" readonly #linkText>
-          <button matSuffix class="btn btn-primary" (click)="copyLink(linkText)">Copy Link</button>
-        </mat-form-field>
-      </div>
-      <div class="email" *ngIf="!link.checked">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Email To</mat-label>
-          <input type="text" matInput placeholder="Enter Names or Email Address">
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Note</mat-label>
-          <textarea type="text" matInput placeholder="Add a note ..."></textarea>
-        </mat-form-field>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')"
-      [disabled]="!sharingValue.checked">Share</button>
   </div>
 </ng-template>
 
