--- a/src/app/web-app/resource/collection/collection-list/collection-list.component.html
+++ b/src/app/web-app/resource/collection/collection-list/collection-list.component.html
@@ -126,8 +126,8 @@
                   <i class="fas fa-share-square"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="shareDD">
-                  <a class="dropdown-item" (click)="openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+                  <a class="dropdown-item" (click)="cmnModal('email')"><i class="fa fa-envelope mr-1"></i>Email</a>
+                  <a class="dropdown-item" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a link</a>
                 </div>
               </div>
               <div class="btn" (click)="actDeactColctn(colctn.id)">
@@ -170,9 +170,9 @@
   <div class="selected-items text-secondary align-self-center">{{selColctnArr.length}} item(s) selected</div>
   <div class="mr-1 ml-3 align-self-center">|</div>
   <div class="btn btn-outline-primary border-0 align-self-center">Clear</div>
-  <div class="btn btn-light align-self-center ml-auto bg-white" (click)="openModal(email)"><i
+  <div class="btn btn-light align-self-center ml-auto bg-white" (click)="cmnModal('email')"><i
       class="fa fa-envelope mr-1"></i>Email</div>
-  <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i> a
+  <div class="btn btn-light align-self-center bg-white" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i> a
     link</div>
   <div class="btn btn-outline-{{isActiveColctn ? 'primary' : 'success'}} align-self-center"
     (click)="actDeactColctn(undefined)">
@@ -206,85 +206,6 @@
       </button>
     </div>
   </form>
-</ng-template>
-
-<!-- email modal -->
-<ng-template #email let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Email</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body" ngbAutofocus>
-    <div class="row">
-      <div class="col-9 border-right">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>To</mat-label>
-          <input matInput type="text" placeholder="Recipients">
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Subject</mat-label>
-          <input matInput type="text" placeholder="Subject">
-        </mat-form-field>
-        <div class="row">
-          <mat-form-field appearance="outline" class="col-8">
-            <mat-label>Message</mat-label>
-            <input matInput type="text" placeholder="Search Content">
-          </mat-form-field>
-          <div class="col-4 mt-3">
-            <div class="btn btn-primary" (click)="openModal(addResource)">
-              <i class="fas fa-file-medical mr-1"></i>Add resource
-            </div>
-          </div>
-        </div>
-        <mat-form-field appearance="outline" class="w-100">
-          <textarea matInput type="text" placeholder=""></textarea>
-        </mat-form-field>
-      </div>
-      <div class="col-3">
-        <h5>Sharing Settings</h5>
-        <mat-checkbox class="ml-2">Allow downloads</mat-checkbox>
-        <mat-checkbox class="ml-2">Send me a copy</mat-checkbox>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-  </div>
-</ng-template>
-
-<!-- get a link modal -->
-<ng-template #getLink let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Get a Link</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body" ngbAutofocus>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Name</mat-label>
-      <input type="text" matInput placeholder="Name">
-    </mat-form-field>
-    <mat-checkbox>Allow downloads</mat-checkbox>
-    <mat-label class="d-block mt-3">Content</mat-label>
-    <div class="row">
-      <div class="col-9">
-        <mat-form-field appearance="outline" class="w-100 search">
-          <mat-label class="ml-2">Search for content</mat-label>
-          <input class="ml-2" type="text" matInput placeholder="Search for content">
-          <i class="fa fa-search text-secondary" matPrefix style="font-size: 18px;"></i>
-        </mat-form-field>
-      </div>
-      <div class="col-3 mt-3">
-        <div class="btn btn-primary">Browse</div>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-  </div>
 </ng-template>
 
 <!-- add resource modal -->
