--- a/src/app/shared/components/add-to-coll/add-to-coll.component.html
+++ b/src/app/shared/components/add-to-coll/add-to-coll.component.html
@@ -1,1 +1,31 @@
-<p>add-to-coll works!</p>
+<div class="modal-header">
+  <h4 class="modal-title" id="modal-basic-title">Add to Collection</h4>
+  <button type="button" class="close" aria-label="Close" (click)="modalRef.dismiss('Cross click')">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body" ngbAutofocus>
+  <ul class="list-unstyled">
+    <li class="d-flex text-primary px-3 curs-ptr">
+      <!-- (click)="colctnModal(collection, 'add')" -->
+      <div class="icon mr-2"><i class="fas fa-folder-plus" style="font-size:40px;"></i></div>
+      <div class="info align-self-center">Create a new Collection</div>
+    </li>
+    <li class="d-flex border-top px-3 py-2 curs-ptr">
+      <div class="icon mr-2">
+        <img src="assets/images/discription.png" style="max-height:50px;">
+      </div>
+      <div class="info align-self-center">
+        <div class="name">ABC</div>
+        <div class="text-secondary" style="font-size:12px;">
+          <span class="modified">4 Days ago</span>
+          <span class="mx-2">|</span>
+          <span class="items">1 Item</span>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-primary" (click)="modalRef.close('Save click')">Share</button>
+</div>
