--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -64,7 +64,7 @@
                     colleagues</a> -->
                 </div>
               </div>
-              <div class="btn my-1" (click)="openModal(addtoCollection)">
+              <div class="btn my-1" (click)="cmnModal('addToCollection')">
                 <i class="fas fa-folder-plus"></i>
               </div>
               <div class="btn" (click)="delContent(cntnt.id)">
@@ -127,7 +127,7 @@
                   <a class="dropdown-item" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a link</a>
                 </div>
               </div>
-              <div class="btn" (click)="openModal(addtoCollection)">
+              <div class="btn" (click)="cmnModal('addToCollection')">
                 <i class="fas fa-folder-plus"></i>
               </div>
               <div class="btn">
@@ -154,7 +154,7 @@
   <div class="btn btn-light align-self-center bg-white" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get
     a
     link</div>
-  <div class="btn btn-light align-self-center bg-white" (click)="openModal(addtoCollection)"><i
+  <div class="btn btn-light align-self-center bg-white" (click)="cmnModal('addToCollection')"><i
       class="fa fa-folder-plus mr-1"></i>Add to collection</div>
   <div class="btn btn-primary align-self-center"><i class="fas fa-trash-alt mr-1"></i>Delete</div>
 </div>
@@ -303,39 +303,5 @@
       <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
       {{addContentArr.length == 0 ? '0 Items Selected' : 'Insert ' + addContentArr.length + ' item(s)'}}
     </button>
-  </div>
-</ng-template>
-
-<!-- add to collection -->
-<ng-template #addtoCollection let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Add to Collection</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body" ngbAutofocus>
-    <ul class="list-unstyled">
-      <li (click)="colctnModal(collection, 'add')" class="d-flex text-primary px-3 curs-ptr">
-        <div class="icon mr-2"><i class="fas fa-folder-plus" style="font-size:40px;"></i></div>
-        <div class="info align-self-center">Create a new Collection</div>
-      </li>
-      <li class="d-flex border-top px-3 py-2 curs-ptr" *ngFor="let t of testArr">
-        <div class="icon mr-2">
-          <img src="assets/images/discription.png" style="max-height:50px;">
-        </div>
-        <div class="info align-self-center">
-          <div class="name">ABC</div>
-          <div class="text-secondary" style="font-size:12px;">
-            <span class="modified">4 Days ago</span>
-            <span class="mx-2">|</span>
-            <span class="items">1 Item</span>
-          </div>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Share</button>
   </div>
 </ng-template>
