--- a/src/app/web-app/resource/exp/exp-inner/exp-inner.component.html
+++ b/src/app/web-app/resource/exp/exp-inner/exp-inner.component.html
@@ -44,7 +44,7 @@
                 </a>
               </div>
             </div>
-            <div class="btn my-1" (click)="openModal(addtoCollection)">
+            <div class="btn my-1" (click)="cmnModal('addToCollection')">
               <i class="fas fa-folder-plus"></i>
             </div>
           </div>
@@ -150,7 +150,7 @@
                     link</a>
                 </div>
               </div>
-              <div class="btn btn-light" (click)="openModal(addtoCollection)">
+              <div class="btn btn-light" (click)="cmnModal('addToCollection')">
                 <i class="fas fa-folder-plus"></i>
               </div>
             </div>
@@ -176,93 +176,6 @@
     </div>
   </ng-container>
 </div>
-
-<!-- add to collection -->
-<ng-template #addtoCollection let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Add to Collection</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body" ngbAutofocus>
-    <ul class="list-unstyled">
-      <li (click)="openModal(newCollection)" class="d-flex text-primary px-3 curs-ptr">
-        <div class="icon mr-2"><i class="fas fa-folder-plus" style="font-size:40px;"></i></div>
-        <div class="info align-self-center">Create a new Collection</div>
-      </li>
-      <li class="d-flex border-top px-3 py-2 curs-ptr" *ngFor="let t of testArr">
-        <div class="icon mr-2">
-          <img src="assets/images/discription.png" style="max-height:50px;">
-        </div>
-        <div class="info align-self-center">
-          <div class="name">ABC</div>
-          <div class="text-secondary" style="font-size:12px;">
-            <span class="modified">4 Days ago</span>
-            <span class="mx-2">|</span>
-            <span class="items">1 Item</span>
-          </div>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Share</button>
-  </div>
-</ng-template>
-
-<!-- add resource modal -->
-<ng-template #addResource let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Select Resource</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body" ngbAutofocus>
-    <div class="search">
-      <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 bg-white" [floatLabel]="'never'">
-        <i matPrefix class="fas fa-search"></i>
-        <input matInput placeholder="Search">
-      </mat-form-field>
-    </div>
-    <!-- experiences -->
-    <div class="text-secondary font-weight-bold my-2">Experiences</div>
-    <div class="exp d-flex border-bottom py-2 dark-bg-hover">
-      <div class="icon align-self-center mr-2">
-        <img src="assets/images/discription.png" style="max-height:50px;">
-      </div>
-      <div class="name align-self-center">
-        English
-      </div>
-      <div class="arrow align-self-center ml-auto mr-3">
-        <i class="fa fa-angle-right"></i>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">0 Items Selected</button>
-  </div>
-</ng-template>
-
-<!-- new collection modal -->
-<ng-template #newCollection let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Create a Collection</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body" ngbAutofocus>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Name</mat-label>
-      <input matInput type="text" placeholder="New Collection Name">
-    </mat-form-field>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-  </div>
-</ng-template>
 
 
 
