--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -25,7 +25,7 @@
       <h3 class="mb-4 clearfix heading align-self-center">
         <!-- My Files -->
         <div class="float-right d-flex">
-          <i *ngIf="selFiles.length>0 || selFolders.length>0 || allFiles.length>0"
+          <i *ngIf="files.length>0 || folders.length>0 || allFiles.length>0"
             class="fa mr-3 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}"
             (click)="switchView()" matTooltip="{{view? 'List View' : 'Grid View'}}">
           </i>
@@ -47,10 +47,10 @@
             </div>
           </div>
         </div>
-        <nav aria-label="breadcrumb" *ngIf="folderNav.length>0">
+        <!-- <nav aria-label="breadcrumb" *ngIf="folderNav.length>0">
           <ol class="breadcrumb bg-transparent pl-0 mb-0">
             <li class="breadcrumb-item" *ngFor="let flNav of folderNav;let i=index">
-              <span class="curs-ptr text-hover" (click)="setSelFoldFiles(flNav)" *ngIf="folderNav.length-1>i">
+              <span class="curs-ptr text-hover" (click)="navgToFldr(flNav)" *ngIf="folderNav.length-1>i">
                 {{flNav.name}}
               </span>
               <span *ngIf="folderNav.length-1<=i">
@@ -58,22 +58,22 @@
               </span>
             </li>
           </ol>
-        </nav>
+        </nav> -->
       </h3>
       <div *ngIf="view">
         <app-loader [type]="'page'" *ngIf="loading"></app-loader>
         <div *ngIf="!loading">
-          <div class="text-right">
+          <div class="text-right" *ngIf="folders.length>0 || files.length>0">
             Sort by:
             <span class="text-primary mr-2 curs-ptr">Name<i class="fa fa-sort-down align-top ml-1"></i></span>
             <span class="text-primary curs-ptr">Date Modified<i class="fa fa-sort-down align-top ml-1"></i></span>
           </div>
           <!-- folders -->
-          <div class="text-secondary" *ngIf="!loading && selFolders.length>0">Folders</div>
+          <div class="text-secondary" *ngIf="folders.length>0">Folders</div>
           <div class="mt-2 row my-files">
-            <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let fl of selFolders">
+            <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let fl of folders">
               <div class="card curs-ptr">
-                <div class="card-body d-flex" (click)="setSelFoldFiles(fl)">
+                <div class="card-body d-flex" (click)="navgToFldr(fl)">
                   <div class="name align-self-center px-0"><i class="fas fa-folder mr-1"></i>{{fl.name}}</div>
                   <div class="d-flex p-0 __options ml-auto">
                     <div class="_options">
@@ -89,9 +89,9 @@
             </div>
           </div>
           <!-- files -->
-          <div class="text-secondary" *ngIf="!loading && selFiles.length>0">Files</div>
+          <div class="text-secondary" *ngIf="!loading && files.length>0">Files</div>
           <div class="mt-2 row my-files">
-            <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let f of selFiles">
+            <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let f of files">
               <div class="card curs-ptr">
                 <div class="card-body">
                   <div class="imagePreview text-center" (click)="chkFolderAndAdd(f)">
@@ -139,7 +139,7 @@
               </div>
             </div>
           </div>
-          <div class="text-center text-secondary" *ngIf="!loading && selFiles.length<=0 && selFolders.length<=0">
+          <div class="text-center text-secondary" *ngIf="!loading && files.length<=0 && folders.length<=0">
             No data found
           </div>
         </div>
