--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -14,7 +14,7 @@
           <i class="fas fa-ellipsis-h"></i>
         </div>
         <div class="dropdown-menu" aria-labelledby="optionsDD">
-          <a class="dropdown-item curs-ptr" (click)="cmnModal('col','dupl')">
+          <a class="dropdown-item curs-ptr" (click)="cmnModal('coll','dupl')">
             <i class="fas fa-copy mr-1"></i>Duplicate
           </a>
           <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'ren')">
