merge,add to collection from coll inner,wrsp inner using shared compn, use def fldr icon and image part in view,add contnt to coll in diff service

--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -65,7 +65,7 @@
                     colleagues</a> -->
                 </div>
               </div>
-              <div class="btn my-1" (click)="cmnModal('addToCollection')">
+              <div class="btn my-1" (click)="cmnModal('addToCollection','',cntnt)">
                 <i class="fas fa-folder-plus"></i>
               </div>
               <div class="btn" (click)="delContent(cntnt.id)">
