--- a/src/app/web-app/resource/exp/exp-inner/exp-inner.component.html
+++ b/src/app/web-app/resource/exp/exp-inner/exp-inner.component.html
@@ -36,15 +36,15 @@
                 <i class="fas fa-share-square"></i>
               </button>
               <div class="dropdown-menu" aria-labelledby="shareDD">
-                <a class="dropdown-item curs-ptr" (click)="cmnModal('email')">
+                <a class="dropdown-item curs-ptr" (click)="cmnModal(wSC,'email')">
                   <i class="fa fa-envelope mr-1"></i>Email
                 </a>
-                <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink')">
+                <a class="dropdown-item curs-ptr" (click)="cmnModal(wSC,'getLink')">
                   <i class="fa fa-link mr-1"></i>Get a link
                 </a>
               </div>
             </div>
-            <div class="btn my-1" (click)="cmnModal('addToCollection')">
+            <div class="btn my-1" (click)="cmnModal(wSC,'addToColl')">
               <i class="fas fa-folder-plus"></i>
             </div>
           </div>
@@ -144,13 +144,13 @@
                   <i class="fas fa-share-square"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="shareDD">
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('email')"><i
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal(wSC,'email')"><i
                       class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal(wSC,'getLink')"><i class="fa fa-link mr-1"></i>Get a
                     link</a>
                 </div>
               </div>
-              <div class="btn btn-light" (click)="cmnModal('addToCollection')">
+              <div class="btn btn-light" (click)="cmnModal(wSC,'addToColl')">
                 <i class="fas fa-folder-plus"></i>
               </div>
             </div>
