--- a/src/app/shared/components/add-to-coll/add-to-coll.component.html
+++ b/src/app/shared/components/add-to-coll/add-to-coll.component.html
@@ -5,27 +5,26 @@
   </button>
 </div>
 <div class="modal-body" ngbAutofocus>
-  <ul class="list-unstyled">
+  <app-loader [type]="'div'" *ngIf="collLoad"></app-loader>
+  <div *ngIf="!collLoad">
+  </div>
+  <ul class="list-unstyled" *ngIf="!collLoad">
     <li class="d-flex text-primary px-3 curs-ptr">
-      <!-- (click)="colctnModal(collection, 'add')" -->
+      <!-- (click)="collModal(collection, 'add')" -->
       <div class="icon mr-2"><i class="fas fa-folder-plus" style="font-size:40px;"></i></div>
       <div class="info align-self-center">Create a new Collection</div>
     </li>
-    <li class="d-flex border-top px-3 py-2 curs-ptr">
-      <div class="icon mr-2">
-        <img src="assets/images/discription.png" style="max-height:50px;">
+    <div id="coll-div" class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let coll of colls">
+      <div class="icon align-self-center mr-2">
+        <img [src]="coll.collectionContents.length > 0 ? coll.collectionContents[0].pdfImage ? coll.collectionContents[0].pdfImage : coll.collectionContents[0].urlIconPath :fldrIcon"
+          style="max-height:50px; width: 40px;">
       </div>
-      <div class="info align-self-center">
-        <div class="name">ABC</div>
-        <div class="text-secondary" style="font-size:12px;">
-          <span class="modified">4 Days ago</span>
-          <span class="mx-2">|</span>
-          <span class="items">1 Item</span>
-        </div>
+      <div class="name align-self-center">
+        {{coll.name}}
       </div>
-    </li>
+      <div class="hover-coll ml-auto mr-3">
+        <button class="btn btn-primary btn-sm" (click)="addCntntToColl(coll)">Add</button>
+      </div>
+    </div>
   </ul>
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-primary" (click)="modalRef.close('Save click')">Share</button>
 </div>
